--- a/thesis/bib/litnew.bib
+++ b/thesis/bib/litnew.bib
@@ -132,6 +132,13 @@
 }
 
 
+@InProceedings{ osi_model_ref,
+  author	= {Sandberg, Bobbi},
+  title		= {The OSI Reference Model},
+  booktitle	= {Networking - The Complete Reference, 3rd edition},
+  year		= {2015},
+  pages		= {40-65}
+}
 
 
 
@@ -184,7 +191,61 @@
 }
 
 
+@misc{osi_iso,
+  author	= {{ISO}},
+  title		= {{Information technology — Open Systems Interconnection — Basic Reference Model: The Basic Model}},
+  howpublished = "\url{https://standards.iso.org/ittf/PubliclyAvailableStandards/index.html/}",
+  note 		= "[Online; accessed 11.2021]"
+}
 
+@misc{iperf,
+  author	= {{Dugan et al}},
+  title		= {{iPerf - The ultimate speed test tool for TCP, UDP and SCTP}},
+  howpublished = "\url{https://iperf.fr/}",
+  note 		= "[Online; accessed 11.2021]"
+}
 
+@misc{tcpdump_man,
+  title		= {{TCPDUMP man page}},
+  howpublished = "\url{https://www.tcpdump.org/manpages/tcpdump.1-4.99.1.html}",
+  note 		= "[Online; accessed 11.2021]"
+}
+
+@misc{ietf_ip,
+  author 	= {{Internet Engineering Task Force (IETF)}},
+  title		= {{Internet Protocol}},
+  howpublished = "\url{https://datatracker.ietf.org/doc/html/rfc791}",
+  note 		= "[Online; accessed 11.2021]"
+}
+@misc{ietf_icmp,
+  author 	= {{Internet Engineering Task Force (IETF)}},
+  title		= {{Internet Control Message Protocol}},
+  howpublished = "\url{https://datatracker.ietf.org/doc/html/rfc792}",
+  note 		= "[Online; accessed 11.2021]"
+}
+@misc{ietf_tcp,
+  author 	= {{Internet Engineering Task Force (IETF)}},
+  title		= {{Transmission Control Protocol}},
+  howpublished = "\url{https://datatracker.ietf.org/doc/html/rfc793}",
+  note 		= "[Online; accessed 11.2021]"
+}
+@misc{ietf_udp,
+  author 	= {{Internet Engineering Task Force (IETF)}},
+  title		= {{User Datagram Protocol}},
+  howpublished = "\url{https://datatracker.ietf.org/doc/html/rfc768}",
+  note 		= "[Online; accessed 11.2021]"
+}
+
+@misc{iph,
+  title		= {{TCP/IP Header}},
+  howpublished = "\url{https://www4.cs.fau.de/Projects/JX/Projects/TCP/jxtcp.html}",
+  note 		= "[Online; accessed 11.2021]"
+}
+
+@misc{icmp_man,
+  title		= {{Linux man page - icmp}},
+  howpublished = "\url{https://man7.org/linux/man-pages/man7/icmp.7.html}",
+  note 		= "[Online; accessed 11.2021]"
+}
 
 
