--- a/thesis/include/acronyms.tex
+++ b/thesis/include/acronyms.tex
@@ -39,11 +39,17 @@
 \DeclareAcronym{udp}{
 	short				= {\sc{UDP}},
 	long				= {User Datagram Protocol},
-	list				= {\Acl{udp}.},
+	list				= {\acl{udp}.},
 	extra				= {%
 		Datagram-oriented, unreliable transport layer protocol.
 	}
 }
+\DeclareAcronym{ip}{
+	short				= {\sc{IP}},
+	long				= {Internet Protocol},
+	list				= {\acl{ip}.}
+}
+
 \DeclareAcronym{iso}{
 	short				= {\sc{ISO}},
 	long				= {International Organization for Standardization},
@@ -57,6 +63,32 @@
 		Reference model for layered network architectures by the \ac{osi}.
 	},
 }
+
+\DeclareAcronym{vps}{
+	short				= {\sc{VPS}},
+	long				= {Variable Packet Size},
+	list				= {\acl{vps}.},
+}
+
+\DeclareAcronym{pptd}{
+	short				= {\sc{PPTD}},
+	long				= {Packet Pair/Train Dispersion},
+	list				= {\acl{pptd}.},
+}
+
+\DeclareAcronym{rtt}{
+	short				= {\sc{RTT}},
+	long				= {Round Trip Time},
+	list				= {\acl{rtt}.},
+}
+
+\DeclareAcronym{ttl}{
+	short				= {\sc{TTL}},
+	long				= {Time-To-Live},
+	list				= {\acl{ttl}.},
+}
+
+
 \DeclareAcronym{pdu}{
 	short				= {\sc{PDU}},
 	short-plural-form	= {\sc*{PDU}s},
