--- a/thesis/include/appendix.tex
+++ b/thesis/include/appendix.tex
@@ -61,7 +61,7 @@ The measurements must be run with a \texttt{JSON} config file containing all the
 
 The following script executes the experiment:
 \begin{lstlisting}[language=bash]
-  $ sudo python run_test.py <config file>
+  $ sudo python run_test.py config.json
 \end{lstlisting}
 
 The following \texttt{JSON} serves as an example of a configuration file used for experiments.
