--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -130,7 +130,7 @@ Benedikt~Jaeger\tlc{}~M.\,Sc.}
 
 
 \begin{abstract}
-	Abstract of the thesis will be written afterwards
+\input{include/abstract-en}
 \end{abstract}
 
 %begin{otherlanguage}{ngerman}
